@@ -1,4 +1,4 @@
-This software is Copyright (c) 2014 by Jakob Voß.
+This software is Copyright (c) 2014- by Jakob Voß <jakob.voss@gbv.de>.
 
 This is free software, licensed under:
 
