@@ -1,3 +1,2 @@
 author=Jakob Voß
-license=GPL_2
 [@Milla]
