@@ -7,7 +7,7 @@ my $doc = Document { title => MetaInlines [ Str 'test' ] },
 
 ok $doc->is_document, 'is_document';
 is $doc->name, 'Document', 'name';
-is_deeply $doc->value, [ Para [ Str 'test' ] ];
+is_deeply $doc->content, [ Para [ Str 'test' ] ];
 ok !$doc->is_block, 'is_block';
 ok !$doc->is_inline, 'is_inline';
 ok !$doc->is_meta, 'is_meta';
@@ -20,7 +20,7 @@ is $meta->{title}->name, 'MetaInlines', 'name';
 
 my $para = $doc->[1]->[0];
 is $para->name, 'Para', 'name';
-is_deeply $para->value, [ Str 'test' ];
+is_deeply $para->content, [ Str 'test' ];
 ok $para->is_block, 'is_block';
 ok !$para->is_document, '!is_document';
 
